--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -37,7 +37,8 @@
     <string name="statusPublicoGrupo">Público</string>
     <string name="statusPrivadoGrupo">Privado</string>
     <string name="integrantes">Integrantes</string>
-    <string name="addFoto">Adicionar Foto</string>
+    <string name="addFotoGrupo">Adicionar Foto</string>
+    <string name="addFotoUsuario">Adicionar Foto</string>
     <string name="salvarGrupo">Criar </string>
     <string name="title_activity_tela_principal">TelaPrincipal</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
@@ -45,6 +46,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_tela_inicio">TelaInicio</string>
     <string name="title_grupo">Grupo</string>
-    <string name="title_dashboard">Dashboard</string>
+    <string name="title_favorito">Favorito</string>
     <string name="title_perfil">Perfil</string>
 </resources>
