--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -52,5 +52,6 @@
     <!-- String toolbar-->
     <string name="item_settings">Configurações</string>
     <string name="item_sair">Sair</string>
+    <string name="item_midia">Midia</string>
 
 </resources>
