--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="cadastrar">Cadastrar</string>
     <string name="entrar">Entrar</string>
     <string name="title_activity_tela_principal">TelaPrincipal</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>÷
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_tela_inicio">TelaInicio</string>
@@ -62,6 +62,6 @@
     <string name="text_adicionar_foto">Adicionar Foto</string>
     <string name="hint_senha">Senha</string>
     <string name="hint_login">Login</string>
-    <string name="text_integrantes">Senha</string>
+    <string name="text_integrantes">integrantes</string>
 
 </resources>
