--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -15,32 +15,44 @@
     </string>
 
     <!-- Strings das Telas -->
-
-    <string name="study">Study</string>
-    <string name="login">Login</string>
-    <string name="password">password</string>
-    <string name="cadastrar">Cadastrar</string>
-    <string name="entrar">Entrar</string>
     <string name="title_activity_tela_principal">TelaPrincipal</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>÷
+    <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_tela_inicio">TelaInicio</string>
     <string name="title_grupo">Grupo</string>
     <string name="title_favorito">Favorito</string>
     <string name="title_perfil">Perfil</string>
-    <string name="item_settings">Configurações</string>
+    <string name="item_perfil">Perfil</string>
     <string name="item_criarGrupo">Criar grupo</string>
     <string name="item_sair">Sair</string>
     <string name="item_midia">Midia</string>
+
+    <string name="text_integrantes">integrantes</string>
+
+    <!-- Tela recuperar senha-->
+    <string name="text_recuperar_senha">Recuperar senha</string>
+    <string name="digite_email_rec">Digite seu email</string>
+    <string name="btn_enviar_senha">Enviar</string>
+
+    <!--Tela Login-->
+    <string name="study">Study</string>
+    <string name="login">Login</string>
+    <string name="password">password</string>
+    <string name="cadastrar">Cadastrar</string>
+    <string name="entrar">Entrar</string>
+    <string name="hint_senha">Senha</string>
+    <string name="hint_login">Login</string>
     <string name="text_esqueci_senha">Esqueci senha</string>
+
+    <!-- Tela cadastrar usuario-->
     <string name="text_criar_usuario">Criar usuário</string>
     <string name="text_nome">Nome</string>
     <string name="text_sobrenome">Sobrenome</string>
     <string name="text_senha">Senha</string>
     <string name="edit_senha" />
-    <string name="text_instituicao">Instituição</string>
-    <string name="edit_instituicao" />
+    <string name="text_curso">Curso</string>
+    <string name="edit_curso" />
     <string name="text_semestre">Semestre</string>
     <string name="edit_semestre" />
     <string name="btn_salvar">Salvar</string>
@@ -49,9 +61,8 @@
     <string name="text_confima_senha">Confima Senha</string>
     <string name="text" />
     <string name="edit_confirma_senha" />
-    <string name="text_recuperar_senha">Recuperar senha</string>
-    <string name="digite_email_rec">Digite seu email</string>
-    <string name="btn_enviar_senha">Enviar</string>
+
+    <!-- Tela Criar curso-->
     <string name="text_criar_grupo">Criar Grupo</string>
     <string name="text_nome_grupo">Nome do grupo</string>
     <string name="edit_nome_grupo" />
@@ -60,8 +71,15 @@
     <string name="rbn_privado">Privado</string>
     <string name="rbn_publico">Público</string>
     <string name="text_adicionar_foto">Adicionar Foto</string>
-    <string name="hint_senha">Senha</string>
-    <string name="hint_login">Login</string>
-    <string name="text_integrantes">integrantes</string>
+
+    <!-- Telas Fragment perfil -->
+    <string name="Editar">Editar</string>
+    <string name="hint_perfilNome">Nome</string>
+    <string name="hint_perfilEmail">Email</string>
+    <string name="hint_perfilCurso">Curso</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 
 </resources>
